// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with /materials/:id route renders correctly 1`] = `
Array [
  <div>
    NavBar
</div>,
  <div
    className="content"
    style={
        Object {
            "paddingTop": "140px",
          }
    }
>
    <div>
        <div>
            Material
        </div>
    </div>
</div>,
]
`;

exports[`with root route renders correctly 1`] = `
Array [
  <div>
    NavBar
</div>,
  <div
    className="content"
    style={
        Object {
            "paddingTop": "140px",
          }
    }
>
    <div>
        <div>
            Materials
        </div>
    </div>
</div>,
]
`;
